Pull up following revision(s) (requested by tsutsui in ticket #522):

usr.sbin/makefs/msdos.c: revision 1.22

Return a proper exit status on failure on creating msdosfs.

No particular comment in PR bin/57752.